--- a/part-a/js/package.json
+++ b/part-a/js/package.json
@@ -1,5 +1,9 @@
 {
   "dependencies": {
-    "ethers": "^5.4.6"
+    "@uniswap/v2-core": "^1.0.1",
+    "@uniswap/v3-core": "^1.0.0",
+    "ethers": "^5.4.6",
+    "lodash": "^4.17.21",
+    "yargs": "^17.1.1"
   }
 }
