--- a/part-b/package.json
+++ b/part-b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@openzeppelin/contracts": "^4.3.1",
     "@uniswap/v2-core": "^1.0.1",
     "@uniswap/v3-core": "^1.0.0",
     "hardhat": "^2.6.4"
