--- a/part-b/package.json
+++ b/part-b/package.json
@@ -3,6 +3,7 @@
     "@openzeppelin/contracts": "^4.3.1",
     "@uniswap/v2-core": "^1.0.1",
     "@uniswap/v3-core": "^1.0.0",
+    "@uniswap/v3-periphery": "^1.2.0",
     "hardhat": "^2.6.4"
   },
   "devDependencies": {
